# ccollections

./: .gitignore  CMakeLists.txt  README.md  linkedList.h
include/: ccollections.h  iterator.h  list.h
src/: arraylist.c  linkedlist.c
